--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -207,7 +207,7 @@ body {
     top: 66px;
     margin-left: -77px;
     width: 220px;
-    background: #424242;
+    background: $whiteColor;
 
     &::before {
       content: "";
@@ -218,7 +218,7 @@ body {
       margin-left: -10px;
       border-style: solid;
       border-width: 0 10px 10px 10px;
-      border-color: #424242 transparent;
+      border-color: $whiteColor transparent;
     }
   }
 
@@ -239,10 +239,14 @@ body {
     text-align: right;
     font-size: 14px;
     padding: 5px;
-    color: #ff3c3c;
+    color: $brightColor;
 
     &:hover {
       text-decoration: underline;
+    }
+
+    &:visited {
+      color: $brightColor;
     }
   }
 
@@ -250,7 +254,8 @@ body {
     display: block;
     width: 200px;
     margin: 10px;
-    background: $whiteColor;
+    border: 1px solid $brightColor;
+    background: #ffffff;
     text-align: center;
     padding: 3px;
   }
